--- a/IdentityServerDemo.csproj
+++ b/IdentityServerDemo.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="4.0.4" />
+  </ItemGroup>
+
 
 </Project>
